# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  30 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.12.4

  30 Jan 2011; Sebastian Pipping <sping@gentoo.org> ChangeLog:
  Enhance console handling on netboot linuxrc (bug #353084)
  Enable shadow on netboot's busybox config (bug #353085)

  Special thanks:
  - Raúl Porcel

  29 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.12.3

  29 Jan 2011; Sebastian Pipping <sping@gentoo.org> gen_compile.sh:
  No longer require device mapper bincache for compiling lvm (bug #353026)

  Special thanks:
  - Peter Hjalmarsson

  27 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.12.2

  27 Jan 2011; Sebastian Pipping <sping@gentoo.org> gen_determineargs.sh:
  Revert kernel release detection fix (regression) (bug #352787)

  23 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.12.1

  23 Jan 2011; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  Fix copying of mdadm/mdmon to the initramfs (bug #352496). Thanks to Malcolm
  Lashley for reporting.

  23 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.12

  22 Jan 2011; Sebastian Pipping <sping@gentoo.org> ChangeLog:
  Enable CONFIG_USB_SUSPEND for x86/amd64 (bug #351376)
  Replace "${MAKEOPTS/-j?/j1}" by "${MAKEOPTS} -j1" (bug #277607)

  21 Jan 2011; Sebastian Pipping <sping@gentoo.org> gen_determineargs.sh:
  Do not query generated files (like include/config/kernel.release) for kernel
  version, as they may be out of sync (bug #263927)

  20 Jan 2011; Sebastian Pipping <sping@gentoo.org> ChangeLog:
  Add proper mdadm support (bug #282100)

  Special thanks:
  - Craig Andrews (Testing)
  - Laurent Pinchart (mdmon/IMSM support)
  - Matthias Dahl (Initial patch)
  - Peter Hjalmarsson (Testing)
